# Global-Memory-Tracing

./: LICENSE  README.md
memtrace-pass/: CMakeLists.txt
memtrace-pass/application/: matrixMul.cu  simple-trace.cu
memtrace-pass/application/bfs/: bfs.cu  kernel.cu  kernel2.cu
memtrace-pass/application/hotspot/: hotspot
memtrace-pass/application/hotspot3D/: 3D.cu  opt1.cu
memtrace-pass/application/nbody/: a.out  test_host.cu
memtrace-pass/application/pathfinder/: pathfinder
memtrace-pass/clang-plugin/: AugmentApp.cpp  CMakeLists.txt
memtrace-pass/llvm-pass/: memtrace-pass.cpp
memtrace-pass/post-processing/: TraceInc.py  bisection-volume.ipynb  cfd-combined.ipynb  com-degree.ipynb  com-degree.py  com-distance.ipynb  com-distance.py  com-regularity.py  extraxct-subset.py  heatmap-vols.py  heatmap.py  histogram.py  kernel-message-evolution.ipynb  parse-binary.py  philandering.ipynb  stride-dominance.ipynb  write-com-ration.ipynb
memtrace-pass/post-processing/.ipynb_checkpoints/: cfd-combined-checkpoint.ipynb  com-distance-checkpoint.ipynb  kernel-message-evolution-checkpoint.ipynb  philandering-checkpoint.ipynb
memtrace-pass/utils/: .DeviceUtils.h.swp  DeviceUtils.cu  DeviceUtils.h  TraceUtils.cpp  TraceUtils.h
